--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
     "npm": "^10.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
