--- a/be/swagger/paths.yaml
+++ b/be/swagger/paths.yaml
@@ -95,3 +95,112 @@ paths:
                     example: Logout Successfully
         "422":
           description: Invalid input
+  /users/change-password:
+    post:
+      tags:
+        - users
+      summary: Change password
+      operationId: changePassword
+      security:
+        - BearerAuth: []
+      requestBody:
+        description: The user that needs to change password
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ChangePasswordBody"
+        required: true
+      responses:
+        "200":
+          description: Change Password Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Change Password Successfully
+        "422":
+          description: Invalid input
+  /users/profile:
+    get:
+      tags:
+        - users
+      summary: Get user profile
+      operationId: getProfile
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: Get Profile Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Get Profile Successfully
+                  result:
+                    $ref: "#/components/schemas/UserProfile"
+        "422":
+          description: Invalid input
+    patch:
+      tags:
+        - users
+      summary: Update user profile
+      operationId: updateProfile
+      security:
+        - BearerAuth: []
+      requestBody:
+        description: The user that needs to be updated
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateProfileBody"
+        required: true
+      responses:
+        "200":
+          description: Update Profile Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Update Profile Successfully
+                  result:
+                    $ref: "#/components/schemas/UserProfile"
+        "422":
+          description: Invalid input
+
+  /users/profile/{username}:
+    get:
+      tags:
+        - users
+      summary: Get a user by ID
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: String username of the user to get
+      responses:
+        "200":
+          description: Get Profile Successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Get Profile Successfully
+                  result:
+                    $ref: "#/components/schemas/UserProfile"
+        "422":
+          description: Invalid input
+  # Remove the duplicate key "/users/profile"
