--- a/be/.env
+++ b/be/.env
@@ -10,3 +10,4 @@ REFRESH_TOKEN_EXPIRES_IN='100d'
 ACCESS_TOKEN_EXPIRES_IN='15m'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='3d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='3d'
+TZ=Asia/Bangkok
