--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.3",
     "i": "^0.3.7",
     "npm": "^10.7.0",
     "react": "^18.3.1",
