--- a/fe/package.json
+++ b/fe/package.json
@@ -8,14 +8,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.4.2",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@tanstack/react-query": "^5.37.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
     "antd": "^5.17.3",
+    "axios": "^1.7.2",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "npm": "^10.7.0",
@@ -27,7 +28,9 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
