--- a/be/.env
+++ b/be/.env
@@ -11,3 +11,11 @@ ACCESS_TOKEN_EXPIRES_IN='30m'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='3d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='3d'
 TZ=Asia/Bangkok
+
+CLIENT_URL='http://localhost:3000'
+
+AWS_ACCESS_KEY_ID='AKIA47CRWDK4XQKQKQ4U'
+AWS_SECRET_ACCESS_KEY='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'
+AWS_REGION='ap-southeast-1'
+SES_FROM_ADDRESS='sonttse161834@fpt.edu.vn'
+AWS_BUCKET_NAME="image-storage-nghich"
