--- a/be/package.json
+++ b/be/package.json
@@ -13,9 +13,12 @@
   "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.12.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
@@ -34,13 +37,24 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.374.0",
+    "@aws-sdk/client-ses": "^3.370.0",
+    "@aws-sdk/lib-storage": "^3.374.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.1",
+    "formidable": "^3.4.0",
+    "helmet": "^7.0.0",
+    "mime": "^3.0.0",
+    "minimist": "^1.2.8",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
+    "nanoid": "^4.0.2",
+    "sharp": "^0.32.1",
+    "slash": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.2"
