--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,3 +19,7 @@ jobs:
         run: echo "${{ secrets.ENV }}" > .env
       - name: Build the Docker image
         run: docker build --progress=plain -t sontt/nghich:v2 .
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push the Docker image
+        run: docker push sontt/nghich:v2
