--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
       - name: "Create env file"
         run: echo "${{ secrets.ENV }}" > .env
       - name: Build the Docker image
-        run: docker build --progress=plain -t sontt/nghich:v2 .
+        run: docker build --progress=plain -t sontt382/nghich .
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Push the Docker image
-        run: docker push sontt/nghich:v2
+        run: docker push sontt382/nghich
