--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Push the Docker image
         run: docker push sontt382/nghichprj
   deploy:
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: executing remote ssh commands using password
