--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.2",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "npm": "^10.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
