--- a/fe/package.json
+++ b/fe/package.json
@@ -18,13 +18,17 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.17.3",
     "axios": "^1.7.2",
-    "html2canvas": "^1.4.1",
+    "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
     "dayjs": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "npm": "^10.7.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
