--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
+    "compressorjs": "^1.2.1",
     "dayjs": "^1.11.11",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
