--- a/be/.env
+++ b/be/.env
@@ -14,8 +14,8 @@ TZ=Asia/Bangkok
 
 CLIENT_URL='http://localhost:3000'
 
-AWS_ACCESS_KEY_ID='AKIA47CRWDK4XQKQKQ4U'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='AKIA47CRWDK4YUZUBWOK'
+AWS_SECRET_ACCESS_KEY='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'
 AWS_REGION='ap-southeast-1'
 SES_FROM_ADDRESS='sonttse161834@fpt.edu.vn'
 AWS_BUCKET_NAME="image-storage-nghich"
