--- a/be/.env
+++ b/be/.env
@@ -12,7 +12,7 @@ EMAIL_VERIFY_TOKEN_EXPIRES_IN='3d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='3d'
 TZ=Asia/Bangkok
 
-CLIENT_URL='http://localhost:3000'
+# CLIENT_URL='http://localhost:3000'
 
 AWS_ACCESS_KEY_ID='AKIA47CRWDK4YUZUBWOK'
 AWS_SECRET_ACCESS_KEY='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'
