--- a/be/.env
+++ b/be/.env
@@ -14,8 +14,8 @@ TZ=Asia/Bangkok
 
 # CLIENT_URL='http://localhost:3000'
 
-AWS_ACCESS_KEY_ID='AKIA47CRWDK4YUZUBWOK'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID='AKIA47CRWDK4XQ5ULWEL'
+AWS_SECRET_ACCESS_KEY='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'
 AWS_REGION='ap-southeast-1'
 SES_FROM_ADDRESS='sonttse161834@fpt.edu.vn'
 AWS_BUCKET_NAME="image-storage-nghich"
